bug fixes where varietals didnt always appear, UI fix on mobile where images didnt resize.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@
 #withFood,
 #withWine,
 #searchLabel {
+    text-align: center;
     color: white;
     text-shadow: -1px 0 grey, 0 1px grey, 1px 0 grey, 0 -1px grey;
 }
@@ -27,6 +28,7 @@
 
 #foodtext {
     filter: alpha(opacity=30);
+
 }
 
 
@@ -38,6 +40,7 @@
 
 #submit {
     width: 100%;
+    margin-top: 5px;
 }
 
 
@@ -64,7 +67,7 @@ footer {
 
 
 .panel-body {
-	display:;
+	padding: 0%;
 }
 
 
@@ -77,7 +80,8 @@ footer {
 }
 
 
-.foodResultImage {
+.foodResultImage,
+.wineResultImage {
     max-width: 75%;
 }
 
@@ -96,18 +100,19 @@ footer {
 }
 
 #blurb,
-.result-block {
+.result-block,
+#loadMore {
     margin: 1% 15% 1% 15%;
     background-color: rgba(255,255,255,.9);
 }
 
 .history-button{
-    margin-right: 3px;
-    margin-left: 3px;
+    margin: 2%;
 }
 
 .food-title,
-.wine-title {
+.wine-title,
+#blurbTitle {
     font-weight: bolder;
 }
 
@@ -221,6 +226,24 @@ footer {
     padding: 0px;
 }
 
-#results {
+#results,
+.form-group{
     text-align: center;
+}
+
+.form-group{
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+.inputArea{
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+#input-form{
+    margin-top: 2%;
+    margin-bottom: 2%;
+    background-color: rgba(66, 139, 202, 1);
+    border-radius: 25px
 }
